...

                <Button
                    android:id="@+id/btnLoadUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvUserList"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
...

                <Button
                    android:id="@+id/btnAddAlbum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAlbumList"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
...

                <LinearLayout
                    android:id="@+id/albumForm"
                    android:visibility="gone"
                    android:orientation="vertical"
...

                    <EditText
                        android:id="@+id/etAlbumName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                    <EditText
                        android:id="@+id/etAlbumArtistIds"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                    <EditText
                        android:id="@+id/etAlbumTrackIds"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                        <Button
                            android:id="@+id/btnSaveAlbum"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...

                        <Button
                            android:id="@+id/btnCancelAlbum"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...

                <Button
                    android:id="@+id/btnAddTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTrackList"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
...

                    <EditText
                        android:id="@+id/etTrackName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                    <EditText
                        android:id="@+id/etTrackArtistIds"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                    <EditText
                        android:id="@+id/etTrackAlbumIds"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                        <Button
                            android:id="@+id/btnSaveTrack"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...

                <Button
                    android:id="@+id/btnAddArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvArtistList"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
...

                    <EditText
                        android:id="@+id/etArtistName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                    <EditText
                        android:id="@+id/etArtistAlbumIds"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                    <EditText
                        android:id="@+id/etArtistTrackIds"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
...

                        <Button
                            android:id="@+id/btnSaveArtist"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...
