<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="6dp">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="8dp"
        android:src="@drawable/imp3" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="username"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnPerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Perms"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"
        android:layout_marginEnd="6dp"/>

    <Button
        android:id="@+id/btnBan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ban"
        android:backgroundTint="#F44336"
        android:textColor="#FFFFFF" />
</LinearLayout>
