...
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:visibility="gone"
        tools:text="John Doe" />

    <TextView
        android:id="@+id/user_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
...
